--- a/app/views/mindleaps_analytics/main/first.html.erb
+++ b/app/views/mindleaps_analytics/main/first.html.erb
@@ -1,5 +1,7 @@
 <head>
   <script src="https://code.highcharts.com/highcharts.js"></script>
+  <script src="https://code.highcharts.com/modules/exporting.js"></script>
+  <script src="https://code.highcharts.com/modules/offline-exporting.js"></script>
 </head>
 
 <%- content_for :header_content do %>
@@ -163,6 +165,20 @@
             credits: {
                 enabled: false
             },
+            exporting: {
+              filename: 'quantity-of-data-chart',
+              buttons: {
+                contextButton: {
+                  menuItems: [
+                    'downloadPNG',
+                    'downloadJPEG',
+                    'downloadPDF',
+                    'downloadSVG'
+                  ]
+                }
+              },
+              fallbackToExportServer: false
+            },
             title: {
                 text: '<%= t(:title_chart_2)%>'
             },
@@ -193,6 +209,20 @@
             tooltip: {
                 valueDecimals: 1
             },
+            exporting: {
+              filename: 'histogram-performance-chart',
+              buttons: {
+                contextButton: {
+                  menuItems: [
+                    'downloadPNG',
+                    'downloadJPEG',
+                    'downloadPDF',
+                    'downloadSVG'
+                  ]
+                }
+              },
+              fallbackToExportServer: false
+            },
             title: {
                 text: '<%= t(:title_chart_4)%>'
             },
@@ -221,6 +251,20 @@
             },
             tooltip: {
                 valueDecimals: 1
+            },
+            exporting: {
+              filename: 'performance-change-chart',
+              buttons: {
+                contextButton: {
+                  menuItems: [
+                    'downloadPNG',
+                    'downloadJPEG',
+                    'downloadPDF',
+                    'downloadSVG'
+                  ]
+                }
+              },
+              fallbackToExportServer: false
             },
             title: {
                 text: '<%= t(:title_chart_5)%>'
@@ -254,6 +298,20 @@
             title: {
                 text: '<%= t(:title_chart_6)%>'
             },
+            exporting: {
+              filename: 'gender-performance-change-chart',
+              buttons: {
+                contextButton: {
+                  menuItems: [
+                    'downloadPNG',
+                    'downloadJPEG',
+                    'downloadPDF',
+                    'downloadSVG'
+                  ]
+                }
+              },
+              fallbackToExportServer: false
+            },
             xAxis: {
                 title: {
                     text: '<%= t(:performance_change) %>'
@@ -279,6 +337,20 @@
             },
             tooltip: {
                 valueDecimals: 2
+            },
+            exporting: {
+              filename: 'average-performance-chart',
+              buttons: {
+                contextButton: {
+                  menuItems: [
+                    'downloadPNG',
+                    'downloadJPEG',
+                    'downloadPDF',
+                    'downloadSVG'
+                  ]
+                }
+              },
+              fallbackToExportServer: false
             },
             title: {
                 text: '<%= t(:title_chart_8)%>'
@@ -323,6 +395,20 @@
                         + "y: <b>" + Highcharts.numberFormat(this.y, 2) + "</b>";
                 },
                 useHTML: true
+            },
+            exporting: {
+              filename: 'perofmance-data-chart',
+              buttons: {
+                contextButton: {
+                  menuItems: [
+                    'downloadPNG',
+                    'downloadJPEG',
+                    'downloadPDF',
+                    'downloadSVG'
+                  ]
+                }
+              },
+              fallbackToExportServer: false
             },
             title: {
                 text: '<%= t(:title_chart_9) + ' ' + @groupname%>'
