--- a/app/views/mindleaps_analytics/main/third.html.erb
+++ b/app/views/mindleaps_analytics/main/third.html.erb
@@ -1,5 +1,7 @@
 <head>
   <script src="https://code.highcharts.com/highcharts.js"></script>
+  <script src="https://code.highcharts.com/modules/exporting.js"></script>
+  <script src="https://code.highcharts.com/modules/offline-exporting.js"></script>
 </head>
 
 <%- content_for :header_content do %>
@@ -81,6 +83,20 @@
                 chart: {
                     renderTo: $containers[i],
                     type: 'scatter'
+                },
+                exporting: {
+                  filename: dataset.group + '-chart',
+                  buttons: {
+                    contextButton: {
+                      menuItems: [
+                        'downloadPNG',
+                        'downloadJPEG',
+                        'downloadPDF',
+                        'downloadSVG'
+                      ]
+                    }
+                  },
+                  fallbackToExportServer: false
                 },
                 title: {
                     text: dataset.group
