Added zoom to scatter plots

--- a/app/views/mindleaps_analytics/main/first.html.erb
+++ b/app/views/mindleaps_analytics/main/first.html.erb
@@ -322,7 +322,8 @@
 
         var Chart10 = Highcharts.chart('chart10', {
             chart: {
-                type: 'scatter'
+                type: 'scatter',
+                zoomType: 'x'
             },
             legend: {
                 enabled: true
