--- a/app/views/mindleaps_analytics/main/second.html.erb
+++ b/app/views/mindleaps_analytics/main/second.html.erb
@@ -165,6 +165,7 @@
 
                 chart: {
                     renderTo: $containers[i],
+                    zoomType: 'x',
                     type: 'scatter'
                 },
                 legend: {
