--- a/app/views/mindleaps_analytics/main/third.html.erb
+++ b/app/views/mindleaps_analytics/main/third.html.erb
@@ -80,6 +80,7 @@
 
                 chart: {
                     renderTo: $containers[i],
+                    zoomType: 'x',
                     type: 'scatter'
                 },
                 exporting: {
