Adjust max legend height

--- a/app/views/mindleaps_analytics/main/second.html.erb
+++ b/app/views/mindleaps_analytics/main/second.html.erb
@@ -169,7 +169,8 @@
                     type: 'scatter'
                 },
                 legend: {
-                    enabled: true
+                    enabled: true,
+                    maxHeight: 120
                 },
                 credits: {
                     enabled: false
