Add zoom to first chart

--- a/app/views/mindleaps_analytics/general/index.slim
+++ b/app/views/mindleaps_analytics/general/index.slim
@@ -130,7 +130,8 @@ javascript:
   $(function () {
       var Chart2 = Highcharts.chart('chart2', {
           chart: {
-              type: 'column'
+              type: 'column',
+              zoomType: 'x'
           },
           legend: {
               enabled: false
