--- a/app/views/mindleaps_analytics/subject/index.slim
+++ b/app/views/mindleaps_analytics/subject/index.slim
@@ -1,4 +1,5 @@
-head
+= content_for :head_content
+  meta name="turbolinks-cache-control" content="no-cache"
   = javascript_include_tag 'mindleaps_analytics/application'
 
 = content_for :header_content do
@@ -138,7 +139,7 @@ javascript:
         );
   });
 
-  $(function () {
+  function startAnalytics() {
     var charts = [],
       $containers = $('#trellis td'),
       datasets = #{{ @series3.html_safe }};
@@ -209,4 +210,6 @@ javascript:
                 series: dataset.series
       }));
     });
-  });
+  }
+
+  document.addEventListener("turbolinks:load", function() {setTimeout(startAnalytics, 1)});
