Polling for HighCharts

--- a/app/views/mindleaps_analytics/general/index.slim
+++ b/app/views/mindleaps_analytics/general/index.slim
@@ -352,4 +352,12 @@ javascript:
       });
   }
 
-  document.addEventListener("turbolinks:load", function() {setTimeout(startAnalytics, 1)});
+  function pollForHighcharts (cb) {
+    if (window.Highcharts) {
+      cb()
+    } else {
+      setTimeout(pollForHighcharts.bind(this, cb), 100);
+    }
+  }
+
+  document.addEventListener("turbolinks:load", function() {pollForHighcharts(startAnalytics)});
