Do not wait on turbolinks to poll for highcharts

--- a/app/views/mindleaps_analytics/group/index.slim
+++ b/app/views/mindleaps_analytics/group/index.slim
@@ -128,4 +128,4 @@ javascript:
     }
   }
 
-  document.addEventListener("turbolinks:load", function() {pollForHighcharts(startAnalytics)});
+  pollForHighcharts(startAnalytics);
