--- a/app/views/mindleaps_analytics/subject/index.slim
+++ b/app/views/mindleaps_analytics/subject/index.slim
@@ -220,4 +220,4 @@ javascript:
     }
   }
 
-  document.addEventListener("turbolinks:load", function() {pollForHighcharts(startAnalytics)});
+  pollForHighcharts(startAnalytics);
