--- a/app/views/mindleaps_analytics/general/index.slim
+++ b/app/views/mindleaps_analytics/general/index.slim
@@ -360,4 +360,4 @@ javascript:
     }
   }
 
-  document.addEventListener("turbolinks:load", function() {pollForHighcharts(startAnalytics)});
+  pollForHighcharts(startAnalytics);
